# synapse

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _config.yml  index.html  index.md  package.xml  requirements.txt  setup.sh
_layouts/: cv.html  default.html  project.html  publications.html
assets/css/: bulma.min.css  index.css  selected-style.css  style.css
config/: open3d_cameraview_params.json
config/llmgrop/llm_preprompts/: base.txt  combine_orders.txt  gen_desc.txt  generate.txt  order.txt  update.txt
docs/: _config.yml  index.md
docs/_layouts/: default.html
src/: datagen.py  infer.py  nsinfer.py  param_synth.py  sketch_synth.py
src/backend/: depth2.py  gsam.py  llm.py  terrain_infer.py
src/backend/utils/: ego_to_bev.py  generate_syncdata_from_bag.py  local_to_map_frame.py  open3d_utils.py  std_utils.py  viz_open3d_basic.py
src/llmgrop/: constants.py  eval_viz.py  gen_randomized_peruser_rating_inputs.py  gradio_user_demo.py  gradio_user_ratings.py  learn_prog.py  sample_prog.py  save_group_users_repr.py  save_reprs.py  sim.py
src/ros/: README.md  depth_node.py  gsam_node.py  launch_all_nodes.launch  processor_node.py  terrain_node.py
src/viz/: fast_infer.py  infer_open3d.py  open3d_vis.py  save_image_overlays.py  save_infer_image_overlays.py  save_video.py
src/viz/plots/: barplot_horiz_ablations.py  barplot_vert_methods.py  overview_barplot_horiz.py  runtimes_sankey.py  taxonomy.py  userstudy_confmat.py
static/css/: index.css
test/demonstrations/: nl_feedback.txt  seqn_filled_lfps_sketches.json  seqn_lfps_sketches.json  seqn_lfps_sketches.txt  state.json
test/demonstrations/SSR/: 001.json  002.json  003.json
