<?xml version="1.0"?>
<package format="2">
  <name>synapse_dev</name>
  <version>1.0.0</version>
  <description>SYNAPSE: SYmbolic Neural-Aided Preference Synthesis Engine - ROS package with modular FastModels nodes for real-time robot integration</description>

  <maintainer email="sadanandm@utexas.edu">Sadanand Modak</maintainer>

  <license>MIT</license>

  <url type="website">https://amrl.cs.utexas.edu/synapse/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package> 